--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap-theme.min.css">
+		<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap-theme.min.css"> -->
         <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
