--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
                 <div class="col-md-12 text-center enter_section">
                     <form class="create-form">
                         <input type="text" class="form-control" name="burger_name" value="" id="enter_text">
+                        <input type="text" class="form-control" name="customer_name" value="" id="enter_text">
                         <button type="submit" class="btn btn-primary" id="text-enter-button">Submit</button>
                     </form>
                     <p>Enter a burger you want to eat Click the "Submit" button.</p>
