--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,8 @@
             <div class="row">
                 <div class="col-md-12 text-center enter_section">
                     <form class="create-form">
-                        <input type="text" class="form-control" name="burger_name" value="" id="enter_text">
-                        <input type="text" class="form-control" name="customer_name" value="" id="enter_text">
+                        <span>Burger: <input type="text" class="form-control" name="burger_name" value="" id="burger_name"></span>
+                        <span>Customer: <input type="text" class="form-control" name="customer_name" value="" id="customer_name"></span>
                         <button type="submit" class="btn btn-primary" id="text-enter-button">Submit</button>
                     </form>
                     <p>Enter a burger you want to eat Click the "Submit" button.</p>
